# axiom-rules-engine

./: .gitignore  Cargo.toml  DECISIONS.md  FEATURE_BRIEF.md  PROGRESS.md  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml  wasm-npm.yml
docs/: bitemporal.md  concept-naming.md  install.md  jurisdiction-repos.md  rulespec.md  schema-alignment.md
python/: pyproject.toml
python-ext/: Cargo.toml  build.rs
python-ext/src/: lib.rs
python/axiom_rules/: __init__.py  cli.py  concepts.py  loader.py
python/axiom_rules_engine/: __init__.py  cli.py  client.py  concepts.py  dense.py  loader.py  models.py  source_registry.py
python/tests/: test_assessment_date.py  test_client_timeout.py  test_concepts.py  test_dense_lifetime.py  test_dense_surface.py  test_removed_source_registry.py  test_source_registry.py
schemas/: compiled-artifact.v1.schema.json  compiled-artifact.v2.schema.json  rulespec-module.v1.schema.json  rulespec-test.v1.schema.json
src/: api.rs  bulk.rs  compile.rs  dense.rs  engine.rs  formula.rs  lib.rs  main.rs  model.rs  rulespec.rs  schema.rs  source.rs  spec.rs
tests/: artifact_version.rs  composed_compile.rs  dense.rs  exclusive_root_resolution.rs  execution.rs  execution_mode_parity.rs  lifetime.rs  module_source.rs  monorepo_env_resolution.rs  monorepo_resolution.rs  rounding.rs  rulespec.rs  rulespec_fixtures.rs  schema_conformance.rs  schema_fidelity.rs  schema_golden.rs  snap.rs  source_links.rs  uc_entitledto_testpack.md  version_cli.rs
tests/fixtures/rulespec/other/family_allowance/: rules.yaml
tests/fixtures/rulespec/other/flat_tax/: rules.yaml
tests/fixtures/rulespec/rounding/: snap_allotment.yaml
tests/fixtures/rulespec/ssi/2021/249/regulation/71/: rules.yaml
tests/fixtures/rulespec/ukpga/2008/30/section/3/: rules.yaml
tests/fixtures/rulespec/ukpga/2010/4/section/18B/: rules.yaml
tests/fixtures/rulespec/uksi/1987/1967/regulation/15/: rules.yaml
tests/fixtures/rulespec/uksi/2026/148/: rules.yaml
wasm/: Cargo.toml  README.md
wasm/npm/: README.md  build-npm.mjs  smoke-dist.mjs
wasm/src/: lib.rs
wasm/test/: smoke.mjs
