[project]
name = "axiom-rules-engine"
version = "0.1.0"
description = "Thin Python wrapper for the Axiom Rules Engine executable"
requires-python = "==3.14.*"
dependencies = ["boto3>=1,<2", "numpy>=2,<3", "pydantic>=2,<3", "PyYAML>=6,<7", "rich>=14,<15"]

[project.scripts]
axiom = "axiom_rules_engine.cli:main"
axiom-rules-engine-py = "axiom_rules_engine.cli:main"
