[package]
name = "axiom-rules-engine-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Browser/wasm bindings for the Axiom Rules Engine: compile and execute RuleSpec programs over a JSON boundary"

[lib]
name = "axiom_rules_engine_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core engine with default features off: no filesystem, environment, or clock
# access — modules arrive through `source::ModuleSource`.
axiom-rules-engine = { path = "..", default-features = false }
console_error_panic_hook = "0.1.7"
serde_json = "1.0.145"
wasm-bindgen = "0.2"

[profile.release]
# Browser payload size matters more than the last few percent of speed.
opt-level = "s"
lto = true
